[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiassist"
version = "1.0.1"
description = "AiAssist Python SDK - Lightweight API client for AI chat integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Interchained LLC", email = "dev@aiassist.net" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "chatbot", "llm", "openai", "groq", "aiassist", "api", "sdk"]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://aiassist.net"
Documentation = "https://aiassist.net/developer-docs/python"
Repository = "https://github.com/aiassistsecure/aiassist-python"
Changelog = "https://github.com/aiassistsecure/aiassist-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["aiassist"]
